--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,11 @@
 # Site settings
-title: Freelancer
-email: your-email@domain.com
-url: https://example.github.io
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
-keywords: "your keywords, separated by commas"
+title: Bryan Lim
+email: bryanlwt@mit.edu
+url: https://limbryan.github.io
+description: "Bryan Lim's Webpage"
+keywords: "Bryan Lim, Machine Learning, Artificial Intelligence, Robotics, Imperial College, MIT"
 skills: "Web Developer - Graphic Artist - User Experience Designer"
+education: "Massachusetts Institute of Technology - Imperial College London"
 meta_author: LastName FirstName
 
 # Google webmaster tools
