--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: bryanlwt@mit.edu
 url: https://limbryan.github.io
 description: "Bryan Lim's Webpage"
 keywords: "Bryan Lim, Machine Learning, Artificial Intelligence, Robotics, Imperial College, MIT"
-skills: "Web Developer - Graphic Artist - User Experience Designer"
+skills: "Robotics - Machine Learning - Mechanical Engineer"
 education: "Massachusetts Institute of Technology - Imperial College London"
 meta_author: LastName FirstName
 
